@@ -478,7 +478,7 @@ write_fontfile (pdf_font *font, cff_font *cffont, long num_glyphs)
 int
 pdf_font_load_type1 (pdf_font *font)
 {
-  pdf_obj      *fontdict, *descriptor;
+  pdf_obj      *fontdict;
   int           encoding_id;
   char         *usedchars, *ident;
   char         *fontname, *uniqueTag;
@@ -504,7 +504,7 @@ pdf_font_load_type1 (pdf_font *font)
   encoding_id = pdf_font_get_encoding  (font);
   fontdict    = pdf_font_get_resource  (font);
 
-  descriptor  = pdf_font_get_descriptor(font);
+                pdf_font_get_descriptor(font);
   usedchars   = pdf_font_get_usedchars (font);
   ident       = pdf_font_get_ident     (font);
   fontname    = pdf_font_get_fontname  (font);
@@ -680,7 +680,6 @@ pdf_font_load_type1 (pdf_font *font)
     t1_ginfo   gm;
     card16     gid, gid_orig;
     long       dstlen_max, srclen;
-    int        have_seac = 0;
     card8     *srcptr, *dstptr;
 
     offset  = dstlen_max = 0L;
@@ -752,7 +751,6 @@ pdf_font_load_type1 (pdf_font *font)
 	  charset->data.glyphs[charset->num_entries] = cff_get_seac_sid(cffont, bchar_name);
 	  charset->num_entries += 1;
 	}
-	have_seac = 1;
       }
       widths[gid] = gm.wx;
     }
